fixes to improve readability

--- a/ethernet-view/src/components/BootloaderContainer/Bootloader/SendElement/SendElement.module.scss
+++ b/ethernet-view/src/components/BootloaderContainer/Bootloader/SendElement/SendElement.module.scss
@@ -33,6 +33,6 @@
 
 .removeBtn {
     cursor: pointer;
-    width: 10%;
-    height: 10%;
+    width: 25px;
+    height: 25px;
 }
